--- a/views/studentnew.erb
+++ b/views/studentnew.erb
@@ -7,7 +7,7 @@
     <label for="name">Name:</label><input type="text" name="name" id="name"> <br>
    <label for="age">Age:</label><input type="text" name="age" id="age"> <br>
     <label for="animal">Spirit Animal:</label><input type="text" name="animal" id="animal"> <br>
-     <label for="squad_id">Squad ID:</label><input type="text" name="squad_id" id="squad_id" value=<%= @squad['squad_id'] %>> <br>
+     <label for="squad_id">Squad ID:</label><input type="text" name="squadid" id="squad_id" value=<%= @squad['squad_id'] %>> <br>
     <input type="submit" value="Add Student">
   </form>
 </div>
