--- a/views/partials/_header.erb
+++ b/views/partials/_header.erb
@@ -3,7 +3,14 @@
 <head>
   <meta charset="UTF-8">
   <title>Squads</title>
+  <!-- Latest compiled and minified CSS -->
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css">
+  
+  <!-- Optional theme -->
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap-theme.min.css">
+  <link rel="stylesheet" href="main.css">
   <script src="http://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
   <script src="../public/app.js"></script>
 </head>
 <body>
+<nav class="navbar navbar-default navbar-fixed-top"><div class='container'><a href="/squads">Home</a>  </div></nav>
