--- a/views/squadshow.erb
+++ b/views/squadshow.erb
@@ -6,4 +6,5 @@
   <li>Mascot: <%= @squad["mascot"]%></li>
 </ul>
 <a href="/squads/<%=@squad["squad_id"]%>/students">see students</a>  
+<a href="/squads/<%=@squad["squad_id"]%>/edit">edit squad</a>  
 <% erb :'partials/_footer' %>
