--- a/views/partials/_header.erb
+++ b/views/partials/_header.erb
@@ -8,9 +8,12 @@
   
   <!-- Optional theme -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap-theme.min.css">
-  <link rel="stylesheet" href="main.css">
+  <link rel="stylesheet" href="./public/main.css">
   <script src="http://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
   <script src="../public/app.js"></script>
 </head>
 <body>
-<nav class="navbar navbar-default navbar-fixed-top"><div class='container'><a href="/squads">Home</a>  </div></nav>
+<nav class="navbar navbar-default navbar-fixed-top">
+<div class='container'>
+<p><a href="/squads">Home</a></p>
+</div></nav>
