--- a/public/main.css
+++ b/public/main.css
@@ -1,3 +1,34 @@
 body {
-  padding-top: 80px;
+  width: 95%;
+  margin: 0 auto;
+  padding-bottom: 0;
+  font-size: 20px;
+  font: "signika", helvetica;
+}
+
+#del-form {
+  height: 45px;
+  padding: 0px;
+  padding-top: 3px;
+  padding-left: 2%;
+  margin: 0px;
+  background-color: rgba(0, 0, 0, 0.4);
+}
+
+.nav-div {
+  font-size: 20px;
+  margin: 7px;
+  font: helvetica;
+}
+
+.msg-form{
+  margin-bottom: 25px;
+}
+
+
+h1 {
+  font: Georgia;
+  font-size: 40px;
+  margin-top: 15px;
+  margin-bottom: 10px;
 }
