--- a/views/index.erb
+++ b/views/index.erb
@@ -1,10 +1,12 @@
-<% erb :'partials/_header' %>
-<h1>List of Squads</h1>
-<p>WDI 16 has the following squads:</p>
-<ul>
-<% @squads.each do |squad| %>
-  <li><%= squad["name"]%> <a href="/squads/<%=squad["squad_id"]%>">show info</a></li>
-  <% end %>
-</ul>
-<a href="/squads/new">Add New Squad</a>
-<% erb :'partials/_footer' %>
+<%= erb :'partials/_header' %>
+<div class="container-fluid">
+  <h1>List of Squads</h1>
+  <p>WDI 16 has the following squads:</p>
+  <ul class="fontsty">
+  <% @squads.each do |squad| %>
+    <li><%= squad["name"]%> <small><a href="/squads/<%=squad["squad_id"]%>">show info</a></small></li>
+    <% end %>
+  </ul>
+  <small><a href="/squads/new">Add New Squad</a></small>
+</div>
+<%= erb :'partials/_footer' %>
