--- a/views/partials/_header.erb
+++ b/views/partials/_header.erb
@@ -8,12 +8,14 @@
   
   <!-- Optional theme -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap-theme.min.css">
-  <link rel="stylesheet" href="./public/main.css">
+  <link href='http://fonts.googleapis.com/css?family=Signika' rel='stylesheet' type='text/css'>
+  <link rel="stylesheet" href="/main.css">
   <script src="http://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
-  <script src="../public/app.js"></script>
+  <script src="/app.js"></script>
 </head>
 <body>
-<nav class="navbar navbar-default navbar-fixed-top">
-<div class='container'>
-<p><a href="/squads">Home</a></p>
-</div></nav>
+<div class="nav-div">
+<ul class="nav nav-tabs">
+  <li role="presentation" class="active"><a href="/squads"><span class="glyphicon glyphicon-home" aria-hidden="true"></span> Squads</a></li>
+</ul>
+</div>
