--- a/views/squadedit.erb
+++ b/views/squadedit.erb
@@ -1,15 +1,29 @@
-<% erb :'partials/_header' %>
+<%= erb :'partials/_header' %>
+<div class="container-fluid">
 <h1>Edit Squad</h1>
-<p>Please make your changes below:</p>
+<p class="msg-form">Please make your changes below:</p>
 
-<form action="/squads/<%= @squad["squad_id"] %>" method="POST">
+<form action="/squads/<%= @squad["squad_id"] %>" method="POST" class="form-horizontal">
   <input type="hidden" name="_method" value="PUT">
-  <label for="name">Name:</label> <input type="text" name="name" id="name" value="<%= @squad["name"] %>">
-  <label for="mascot">Mascot:</label> <input type="text" name="mascot" id="mascot" value="<%= @squad["mascot"] %>">
-  <input type="submit" value="Update Squad">
-</form>
-<form action="/squads/<%= @squad["squad_id"] %>" method="POST">
-  <input type="hidden" name="_method" value="DELETE"><input type="submit" value="DELETE">
-</form>
+  <div class="form-group">
+  <label for="name" class="col-sm-2 control-label">Name:</label>
+  <div class="col-sm-10">
+  <input type="text" name="name" id="name" value="<%= @squad["name"] %>">
+  </div></div>
+  <div class="form-group">
+  <label for="mascot" class="col-sm-2 control-label">Mascot:</label>
+  <div class="col-sm-10">
+  <input type="text" name="mascot" id="mascot" value="<%= @squad["mascot"] %>">
+  <input type="submit" value="Update Squad" class="btn btn-primary">
+  </div></div>
+</form> 
+</div>
 
-<% erb :'partials/_footer' %>
+<footer>
+<form action="/squads/<%= @squad["squad_id"] %>" method="POST" class="navbar-form navbar-fixed-bottom">
+  <input type="hidden" name="_method" value="DELETE"><hr><input type="submit" value="DELETE" class="btn btn-danger del">
+</form>
+</footer> 
+
+
+<%= erb :'partials/_footer' %>
